--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -633,8 +633,6 @@ svg {
     flex-direction: column;
 }
 
-
-
 #allAccounts form {
     width: 100%;
 }
@@ -645,14 +643,14 @@ svg {
     flex-direction: row;
 }
 
-#allAccounts .account input{
+#allAccounts .account input {
     border: none;
     background-color: var(--secondary-background-color);
     width: 95%;
     font-size: medium;
 }
 
-#allAccounts .account input:focus{
+#allAccounts .account input:focus {
     outline: none;
 }
 
@@ -663,11 +661,9 @@ svg {
     bottom: 3px;
 }
 
-#allAccounts .account .buttons button{
+#allAccounts .account .buttons button {
     border: none;
-    
 }
-
 
 #allAccounts .edit-accounts {
     display: flex;
@@ -860,7 +856,7 @@ svg {
     flex-direction: row;
 }
 
-#allContracts .contract input:focus{
+#allContracts .contract input:focus {
     outline: none;
 }
 
@@ -871,9 +867,8 @@ svg {
     bottom: 3px;
 }
 
-#allContracts .contract .buttons button{
+#allContracts .contract .buttons button {
     border: none;
-    
 }
 
 #allContracts .edit-contracts {
@@ -1279,10 +1274,6 @@ svg {
     padding: 0;
 }
 
-
-
-
-
 /*-----------------------------------------------------------------------------------------------*/
 /*                                      Account-contract-CLIENT                                          */
 /*-----------------------------------------------------------------------------------------------*/
@@ -1292,18 +1283,18 @@ svg {
     flex-wrap: wrap;
     width: 90%;
     height: 100%;
-  }
+}
 
 .account-list-form #div-container {
-        display: grid;
-    
-        height: 60%;
-        width: 70%;
-        row-gap: 1%;
-        column-gap: 1%;
-      }
-.p{
-    height:2%
+    display: grid;
+
+    height: 60%;
+    width: 70%;
+    row-gap: 1%;
+    column-gap: 1%;
+}
+.p {
+    height: 2%;
 }
 
 #div-container .account-div {
@@ -1314,31 +1305,28 @@ svg {
     justify-content: center;
     width: 60%;
     background-color: var(--secondary-background-color);
-  }
-  #div-container .information-div {
+}
+#div-container .information-div {
     padding: 7% 7% 7% 7%;
     text-align: center;
     width: 90%;
     background-color: var(--secondary-background-color);
-  }
+}
 
 .input {
-    display:flex;
-    flex-direction:column;
+    display: flex;
+    flex-direction: column;
     color: var(--text-color);
     border-style: none;
     background-color: #e8d2d2;
-    padding: 6px 1% 8px 2%; 
-    box-sizing: border-box; 
-    width: 45%; 
-    margin-left:5px;
+    padding: 6px 1% 8px 2%;
+    box-sizing: border-box;
+    width: 45%;
+    margin-left: 5px;
 }
-.input[type="number"]{
-    margin-top:10%;
+.input[type="number"] {
+    margin-top: 10%;
 }
-
-
-
 
 .button {
     background-color: #e8d2d2;
@@ -1347,58 +1335,55 @@ svg {
     margin-top: 2%;
     display: flex;
     flex-direction: row;
-    margin-left:2px;
-    margin-bottom:5px;
+    margin-left: 2px;
+    margin-bottom: 5px;
 }
 
 .label {
-    display:flex;
-    float:left;
+    display: flex;
+    float: left;
     background-color: var(--primary-color);
     color: #120909;
-    padding:5px 1% 5px 2%; 
-    box-sizing: border-box; 
+    padding: 5px 1% 5px 2%;
+    box-sizing: border-box;
     width: 45%;
-    margin-left:5px; 
+    margin-left: 5px;
 }
 .radio {
     display: contents;
     margin-bottom: 5px;
-    width:4%;
+    width: 4%;
 }
-
-
 
 /*-----------------*/
-.contract-list-form{
-    display:grid;
-    grid-template-columns:repeat(2,1fr);
-    grid-template-rows:repeat(2,1fr);
-    height:100%;
-    width:100%;
-    row-gap:1%;
-    column-gap:1%;
+.contract-list-form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    height: 100%;
+    width: 100%;
+    row-gap: 1%;
+    column-gap: 1%;
 }
 .contract-list-form > div {
-    border:2px solid var(--primary-color);
-    border-radius:10px;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    height:50%;
-    width:50%;
+    border: 2px solid var(--primary-color);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 50%;
+    width: 50%;
     background-color: var(--secondary-background-color);
 }
-.contract-list-form > div > div >div > button{
+.contract-list-form > div > div > div > button {
     background-color: #e8d2d2;
     width: 45%;
     padding: 6px 1% 5px 2%;
     margin-top: 2%;
     display: flex;
     flex-direction: row;
-    margin-left:28%;
-    margin-bottom:5px;
-    
+    margin-left: 28%;
+    margin-bottom: 5px;
 }
 
 /***********************/
@@ -1409,7 +1394,7 @@ svg {
     flex-wrap: wrap;
     width: 100%;
     height: 100%;
-    }
+}
 
 .contract-details-page > div {
     display: flex;
@@ -1417,59 +1402,58 @@ svg {
     width: 50%;
     margin-bottom: 15px;
     box-sizing: border-box;
-    }
-.contract-details-page > div > p{
-    height:2%
+}
+.contract-details-page > div > p {
+    height: 2%;
 }
 
-.contract-details-page > div > p> select {
-        color:var(--text-color) ;
-        border-style: none;
-        background-color:#e8d2d2 ;
-        padding: 6px 1% 8px 2%;
-        box-sizing: border-box;
-        width: 45%;
-        margin-bottom: 5px;
-    }
-
-.contract-details-page > div > p > input {
-    display:flex;
-    flex-direction:column;
+.contract-details-page > div > p > select {
     color: var(--text-color);
     border-style: none;
     background-color: #e8d2d2;
-    padding: 6px 1% 8px 2%; 
-    box-sizing: border-box; 
-    width: 45%; 
-    margin-left:2px;
+    padding: 6px 1% 8px 2%;
+    box-sizing: border-box;
+    width: 45%;
+    margin-bottom: 5px;
+}
+
+.contract-details-page > div > p > input {
+    display: flex;
+    flex-direction: column;
+    color: var(--text-color);
+    border-style: none;
+    background-color: #e8d2d2;
+    padding: 6px 1% 8px 2%;
+    box-sizing: border-box;
+    width: 45%;
+    margin-left: 2px;
 }
 
 .contract-details-page > div > div {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-  }
+}
 
-.contract-details-page  > div > p > label {
-    display:flex;
-    float:left;
+.contract-details-page > div > p > label {
+    display: flex;
+    float: left;
     background-color: var(--primary-color);
     color: #120909;
-    padding:5px 1% 5px 2%; 
-    box-sizing: border-box; 
+    padding: 5px 1% 5px 2%;
+    box-sizing: border-box;
     width: 45%;
-    margin-left:5px; 
+    margin-left: 5px;
 }
 
 /*********************/
-.new-contract-page{
-justify-content: space-between;
+.new-contract-page {
+    justify-content: space-between;
     background-color: var(--secondary-background-color);
     display: flex;
     flex-wrap: wrap;
     width: 100%;
     height: 100%;
-
 }
 .new-contract-page > div {
     display: flex;
@@ -1479,54 +1463,53 @@ justify-content: space-between;
     box-sizing: border-box;
 }
 
-.new-contract-page> div > p{
-        height:2%
+.new-contract-page > div > p {
+    height: 2%;
 }
 
 .new-contract-page > div > p > label {
-    display:flex;
-    float:left;
+    display: flex;
+    float: left;
     background-color: var(--primary-color);
     color: #120909;
-    padding:5px 1% 5px 2%; 
-    box-sizing: border-box; 
+    padding: 5px 1% 5px 2%;
+    box-sizing: border-box;
     width: 45%;
-    margin-left:2px; 
+    margin-left: 2px;
 }
 
 .new-contract-page > div > p > input {
-    display:flex;
-    flex-direction:column;
+    display: flex;
+    flex-direction: column;
     color: var(--text-color);
     border-style: none;
     background-color: #e8d2d2;
-    padding: 6px 1% 8px 2%; 
-    box-sizing: border-box; 
-    width: 45%; 
-    margin-left:2px;
+    padding: 6px 1% 8px 2%;
+    box-sizing: border-box;
+    width: 45%;
+    margin-left: 2px;
 }
 
-.new-contract-page > div > p> select {
-        color:var(--text-color) ;
-        border-style: none;
-        background-color:#e8d2d2 ;
-        padding: 6px 1% 8px 2%;
-        box-sizing: border-box;
-        width: 45%;
-        margin-bottom: 5px;
-        margin-left:1px;
+.new-contract-page > div > p > select {
+    color: var(--text-color);
+    border-style: none;
+    background-color: #e8d2d2;
+    padding: 6px 1% 8px 2%;
+    box-sizing: border-box;
+    width: 45%;
+    margin-bottom: 5px;
+    margin-left: 1px;
 }
-.new-contract-page > div > button{
+.new-contract-page > div > button {
     background-color: #e8d2d2;
     width: 45%;
     padding: 6px 1% 5px 2%;
     margin-top: 2%;
     display: flex;
     flex-direction: row;
-    margin-left:2px;
-    margin-bottom:5px;
+    margin-left: 2px;
+    margin-bottom: 5px;
 }
-
 
 #delete-event-modal {
     display: flex;
@@ -1687,17 +1670,13 @@ justify-content: space-between;
 /*                                      MANAGE DOCUMENTS                                         */
 /*-----------------------------------------------------------------------------------------------*/
 
-
-
-
-#allDocuments{
+#allDocuments {
     width: 100%;
     height: 100%;
 
     display: flex;
     flex-direction: column;
     align-items: center;
-    
 }
 
 #allDocuments .showDocuments {
@@ -1709,9 +1688,9 @@ justify-content: space-between;
     width: 1000px;
     background-color: var(--primary-color);
     color: white;
-}  
+}
 
-#allDocuments th:first-child{
+#allDocuments th:first-child {
     width: 300px;
 }
 
@@ -1720,35 +1699,28 @@ justify-content: space-between;
     display: flex;
     justify-content: center;
     flex-direction: column;
-
 }
 
-#allDocuments table td input{
+#allDocuments table td input {
     border: none;
     width: 95%;
     font-size: medium;
     background-color: var(--secondary-background-color);
 }
 
-
-
-
-#allDocuments form{
+#allDocuments form {
     width: 100%;
 }
 
-
 #allDocuments .account {
     margin-top: 20px;
-
 }
-
 
 #allDocuments .edit-documents-list {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;    
+    flex-direction: column;
     width: 100%;
     margin-top: 100px;
 }
@@ -1763,8 +1735,8 @@ justify-content: space-between;
 }
 
 #allDocuments .edit-documents-list input {
-  height: 40px;
-  font-size: large;
+    height: 40px;
+    font-size: large;
 }
 
 #allDocuments .space {
@@ -1786,7 +1758,6 @@ justify-content: space-between;
     border: none;
     color: var(--primary-color);
 }
-
 
 #add-doc-modal {
     display: flex;
@@ -1907,7 +1878,6 @@ justify-content: space-between;
     font-size: larger;
 }
 
-
 /* ----------------------------------------------------------------------------------------------- */
 
 /*                                      ADVISOR DOCUMENTS                                          */
@@ -1931,22 +1901,21 @@ justify-content: space-between;
     margin-top: 15px;
 
     font-size: large;
-    
-    width: 100%;
 
+    width: 100%;
 }
 
-#allDocuments .advisor-documents td input[type="checkbox"]{
+#allDocuments .advisor-documents td input[type="checkbox"] {
     height: 20px;
     width: 30px;
     margin-left: auto;
-
-    
 }
 
 #allDocuments .advisor-documents {
     margin-right: auto;
+}
 
+/* ----------------------------------------------------------------------------------------------- */
 /*                                      ADVISOR ACCOUNTS                                           */
 /* ----------------------------------------------------------------------------------------------- */
 
@@ -1957,17 +1926,15 @@ justify-content: space-between;
     width: 100%;
 }
 
-#allAccounts .advisor-accounts .buttons{
+#allAccounts .advisor-accounts .buttons {
     display: flex;
     flex-direction: row;
 }
-
 
 #allAccounts .advisor-accounts table {
     width: 100%;
     display: flex;
     background-color: var(--secondary-background-color);
-    
 }
 
 #allAccounts .advisor-accounts td {
@@ -1977,17 +1944,16 @@ justify-content: space-between;
     height: 30px;
 }
 
-#allAccounts .advisor-accounts td .date{
+#allAccounts .advisor-accounts td .date {
     display: flex;
     flex-direction: row;
 
     margin-left: 30px;
 }
 
-#allAccounts .advisor-accounts td .overdraft{
+#allAccounts .advisor-accounts td .overdraft {
     display: flex;
     flex-direction: row;
-
 }
 
 #allAccounts .advisor-accounts td input[type="text"] {
@@ -2001,10 +1967,9 @@ justify-content: space-between;
     width: 300px;
 }
 
-#allAccounts .advisor-accounts td input[name="input-overdraft"]{
+#allAccounts .advisor-accounts td input[name="input-overdraft"] {
     width: 100px;
 }
-
 
 #allAccounts .advisor-accounts td input[type="text"]:focus {
     outline: none;
@@ -2018,13 +1983,12 @@ justify-content: space-between;
     border: none;
 }
 
-#allAccounts .advisor-accounts form{
+#allAccounts .advisor-accounts form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-
 
 #edit-overdraft-modal {
     display: flex;
@@ -2160,7 +2124,6 @@ justify-content: space-between;
     margin-top: 0px;
 }
 
-
 #delete-modal {
     display: flex;
     width: 100%;
@@ -2196,15 +2159,13 @@ justify-content: space-between;
     box-sizing: border-box;
 }
 
-#delete-modal .form-content .label-containers{
+#delete-modal .form-content .label-containers {
     width: 200px;
 }
 
-#delete-modal .form-content select{
+#delete-modal .form-content select {
     width: 100px;
 }
-
-
 
 #delete-modal form .form-content {
     display: flex;
@@ -2288,6 +2249,4 @@ justify-content: space-between;
     cursor: pointer;
     color: white;
     font-size: larger;
-
 }
-
