--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -1308,7 +1308,8 @@ svg {
 #div-container .information-div {
     padding: 7% 7% 7% 7%;
     text-align: center;
-    width: 90%;
+    width: 100%;
+    border-radius:10px;
     background-color: var(--secondary-background-color);
 }
 
@@ -1356,6 +1357,9 @@ svg {
 }
 
 /*-----------------*/
+.contract-div{
+    height:100%;
+}
 .contract-list-form {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -1475,8 +1479,10 @@ svg {
 #div-container .information-div{
     padding:7% 7% 7%  7%;
     text-align:center;
-    width:90%;
+    width:100%;
+    height:80%;
     background-color: var(--secondary-background-color);
+    border-radius:10px;
 }
 
 #delete-event-modal {
