--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -1355,8 +1355,8 @@ svg {
     padding: 5px 1% 5px 2%;
     box-sizing: border-box;
     width: 45%;
-    margin-left:5px; 
-    margin-top:2px;
+    margin-left: 5px;
+    margin-top: 2px;
 }
 .radio {
     display: initial;
@@ -2381,4 +2381,57 @@ svg {
 
 .reserved-slot {
     background-color: #646464 !important;
+}
+
+#new-event-documents-modal {
+    display: flex;
+    width: 100%;
+    height: 100%;
+
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    opacity: 1;
+
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.3);
+
+    align-items: center;
+    justify-content: center;
+}
+
+#new-event-documents-modal > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+
+    width: 435px;
+    height: 400px;
+
+    background-color: var(--secondary-background-color);
+    border-radius: 5px;
+    padding: 30px;
+    box-sizing: border-box;
+}
+
+.red-button {
+    background-color: var(--primary-color);
+    color: white;
+    border-radius: 10px;
+    border-color: var(--primary-color);
+
+    padding: 5px 10px;
+
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+
+    font-size: larger;
+}
+
+.red-button:focus {
+    /* y - 1 */
+    transform: translateY(-1px);
+    box-shadow: 0 1px 0 var(--primary-color);
 }
