--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -1317,7 +1317,7 @@ svg {
     padding: 7% 7% 7% 7%;
     text-align: center;
     width: 100%;
-    border-radius:10px;
+    border-radius: 10px;
     background-color: var(--secondary-background-color);
 }
 
@@ -1365,8 +1365,8 @@ svg {
 }
 
 /*-----------------*/
-.contract-div{
-    height:100%;
+.contract-div {
+    height: 100%;
 }
 .contract-list-form {
     display: grid;
@@ -1401,7 +1401,7 @@ svg {
 /***********************/
 .contract-details-page {
     justify-content: space-between;
-   
+
     display: flex;
     flex-wrap: wrap;
     width: 100%;
@@ -1474,23 +1474,22 @@ svg {
     margin-bottom: 15px;
     box-sizing: border-box;
 }
-#div-container .account-div{
-    border:2px solid var(--primary-color);
-    border-radius:10px;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    width:50%;
+#div-container .account-div {
+    border: 2px solid var(--primary-color);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
     background-color: var(--secondary-background-color);
-
 }
-#div-container .information-div{
-    padding:7% 7% 7%  7%;
-    text-align:center;
-    width:100%;
-    height:80%;
+#div-container .information-div {
+    padding: 7% 7% 7% 7%;
+    text-align: center;
+    width: 100%;
+    height: 80%;
     background-color: var(--secondary-background-color);
-    border-radius:10px;
+    border-radius: 10px;
 }
 
 #delete-event-modal {
@@ -1634,18 +1633,33 @@ svg {
 /*                                      EMPLOYEE OVERVIEW                                          */
 /* ----------------------------------------------------------------------------------------------- */
 
-#employee-overview .login-infos {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    grid-template-areas: "login-infos login-infos";
+#employee-overview {
+    padding: 20px;
 }
 
-#employee-overview .general-infos {
+#employee-overview fieldset {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
-    grid-template-areas: "general-infos general-infos";
+
+    padding: 20px;
+    margin: 20px 0;
+
+    border: 2px solid var(--primary-color);
+    border-radius: 10px;
+}
+
+#employee-overview fieldset > legend {
+    font-size: large;
+    font-weight: bold;
+}
+
+.styled-input {
+    background-color: white;
+    border: none;
+    border-bottom: 2px solid var(--primary-color);
+    outline: none;
+    padding: 5px;
 }
 
 /*-----------------------------------------------------------------------------------------------*/
@@ -2404,7 +2418,6 @@ svg {
 }
 
 .red-button:focus {
-    /* y - 1 */
     transform: translateY(-1px);
     box-shadow: 0 1px 0 var(--primary-color);
 }
