--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -160,6 +160,10 @@ nav button > p {
     margin-right: 15px;
 }
 
+nav button:last-child {
+    margin-top: 0px !important;
+}
+
 /*-----------------------------------------------------------------------------------------------*/
 
 svg {
@@ -2433,4 +2437,37 @@ svg {
 .red-button:focus {
     transform: translateY(-1px);
     box-shadow: 0 1px 0 var(--primary-color);
+}
+
+/* ----------------------------------------------------------------------------------------------- */
+/*                                      USER INFORMATIONS                                          */
+/* ----------------------------------------------------------------------------------------------- */
+
+#user-infos fieldset {
+    border: 2px solid var(--primary-color);
+    border-radius: 10px;
+
+    padding: 20px;
+    margin: 20px 0;
+}
+
+#user-infos fieldset > div {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-rows: repeat(2, minmax(0, 1fr));
+
+    box-sizing: border-box;
+}
+
+#user-infos fieldset > legend {
+    font-size: large;
+    font-weight: bold;
+}
+
+#user-infos label {
+    margin: 5px 0;
+}
+
+#user-infos p {
+    margin: 5px 0;
 }
