feat : check for accounts

--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -1954,6 +1954,10 @@ svg {
     height: 30px;
 }
 
+#allAccounts .advisor-accounts h4{
+    color :red;
+}
+
 #allAccounts .advisor-accounts td .date {
     display: flex;
     flex-direction: row;
