--- a/src/style/global-style.css
+++ b/src/style/global-style.css
@@ -94,7 +94,7 @@ main {
 
 nav {
     flex: 1;
-    min-width: 300px;
+    min-width: 270px;
     background-color: var(--secondary-background-color);
     padding: 0;
     margin: 0;
@@ -131,7 +131,7 @@ nav button {
     width: 85%;
     height: 65px;
 
-    margin: 15px 0;
+    margin: max(10px, 1.5vh) 0;
 
     font-size: 20px;
     font-weight: 500;
